# mstar-rs

./: .gitignore  Cargo.toml  README.md
crates/mstar-comm/: Cargo.toml
crates/mstar-comm/src/: communicator.rs  frame.rs  lib.rs  mailbox.rs  shm.rs
crates/mstar-core/: Cargo.toml
crates/mstar-core/src/: error.rs  graph.rs  lib.rs  tensor.rs  walk.rs
crates/mstar-py/: Cargo.toml  pyproject.toml
crates/mstar-py/src/: lib.rs
crates/mstar-runtime/: Cargo.toml
crates/mstar-runtime/src/: kv.rs  lib.rs  stream.rs
crates/mstar-sched/: Cargo.toml
crates/mstar-sched/src/: lib.rs
crates/mstar-server/: Cargo.toml
crates/mstar-server/src/: adapters.rs  bridge.rs  main.rs  media.rs  protocol.rs  serving.rs  tokenizer.rs
docs/: openai-coverage.md  tp-sp-audit.md
examples/: bench_shm_pinning.py  client_concurrent.py  gen_qwen3_audio_samples.py  profile_decode_overlap.py  profile_qwen3_audio.py  run_dist.py  run_orpheus.py  run_pi05.py  run_vjepa2.py  serve.py  serve_bridge.py  tp_thinker_forward.py  verify_arena_backend.py  verify_async_pipeline.py  verify_audio_input.py  verify_batched_capture.py  verify_batched_graph_buckets.py  verify_comm_wakeup_tcp.py  verify_decentralized_stream.py  verify_disagg.py  verify_disagg_invariants.py  verify_disagg_worker_crash.py  verify_dist.py  verify_dist_tp.py  verify_frontend_tokenize.py  verify_mstar_wrapper_interop.py  verify_multinode_disagg.py  verify_orpheus_batched.py  verify_pi05_batched.py  verify_qwen3_audio_disagg.py  verify_qwen3_audio_dist.py  verify_qwen3_audio_media_dist.py  verify_qwen3_graph.py  verify_request_kwargs.py  verify_serve_local.py  verify_serving_errors.py  verify_shm_spill.py  verify_talker_code2wav.py  verify_thinker_media_dist.py  verify_thinker_tp_dist.py  (+2 more)
python/mstar_rs/: __init__.py  batched_graph.py  dist.py  driver.py  fi.py  graph.py  launch.py  model.py  server.py  store.py
python/mstar_rs/models/: __init__.py  echo.py  orpheus.py  pi05.py  qwen3_omni.py  vjepa2.py
