[workspace]
resolver = "2"
members = [
    "crates/mstar-core",
    "crates/mstar-sched",
    "crates/mstar-runtime",
    "crates/mstar-comm",
    "crates/mstar-server",
    "crates/mstar-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
