[package]
name = "mstar-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mstar-server"
path = "src/main.rs"

[dependencies]
mstar-comm = { path = "../mstar-comm" }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1.3"
futures = "0.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
serde_bytes = "0.11"
tower-http = { version = "0.5", features = ["cors"] }
ureq = { version = "2", default-features = false, features = ["tls"] }
